# kodmod-ai

./: ARCHITECTURE.md  README.md
kodmod-ai/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml  requirements.txt
kodmod-ai/accessibility/: narration.py  simplifier.py  voice_commands.py
kodmod-ai/agents/: accessibility_agent.py  analytics_agent.py  intent_router.py  problem_generator.py  quiz_agent.py  quiz_analyzer.py  recommendation_agent.py  reflection_agent.py  scoring_agent.py  tutoring_agent.py
kodmod-ai/analytics/: aggregator.py  insights.py  student_model.py
kodmod-ai/api/: dependencies.py  main.py
kodmod-ai/api/routes/: analytics.py  content.py  exercise.py  health.py  quiz.py  student.py  voice.py
kodmod-ai/api/websockets/: voice_stream.py
kodmod-ai/config/: logging.py  settings.py
kodmod-ai/database/: models.py  schema.sql  session.py
kodmod-ai/database/migrations/: env.py
kodmod-ai/docker/: Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml  log_conf.json  prometheus.yml
kodmod-ai/docs/: ACCESSIBILITY.md  API.md  DEPLOYMENT.md
kodmod-ai/graphs/: main_graph.py  state.py
kodmod-ai/memory/: episodic.py  long_term.py  short_term.py
kodmod-ai/models/: content.py  quiz.py  session.py  student.py
kodmod-ai/prompts/: intent_router.md  loader.py  quiz_generator.md  recommendation.md  reflection.md  scoring_rubric.md  tutoring_system.en.md  tutoring_system.id.md
kodmod-ai/rag/: chunking.py  embeddings.py  ingestion.py  reranker.py  retriever.py
kodmod-ai/rag/stores/: pgvector_store.py  qdrant_store.py
kodmod-ai/scripts/: ingest_documents.py  seed_curriculum.py
kodmod-ai/tests/: conftest.py
kodmod-ai/tests/integration/: test_graph_wiring.py
kodmod-ai/tests/unit/: test_accessibility_narration.py  test_chunking.py  test_student_model.py  test_voice_commands.py
kodmod-ai/tools/: analytics_tool.py  database_tool.py  llm_client.py  quiz_generator_tool.py  rag_tool.py  student_profile_tool.py  voice_tool.py
kodmod-ai/voice/: streaming.py  stt.py  tts.py
