[project]
name = "kodmod-ai"
version = "0.1.0"
description = "Voice-first agentic learning assistant for visually impaired students"
authors = [{ name = "KODMOD Team" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
  # ---- Core orchestration
  "langgraph>=0.2.40",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langgraph-checkpoint>=1.0.0",
  "langgraph-checkpoint-postgres>=1.0.0",

  # ---- Web stack
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "websockets>=13.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "PyJWT>=2.9",

  # ---- Database / cache
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis[hiredis]>=5.0",
  "pgvector>=0.3.0",

  # ---- RAG / embeddings
  "sentence-transformers>=3.0",
  "FlagEmbedding>=1.2.10",
  "qdrant-client>=1.10",
  "rank-bm25>=0.2.2",
  "pypdf>=4.3",

  # ---- Voice
  "faster-whisper>=1.0.3",
  "soundfile>=0.12",
  "numpy>=1.26",

  # ---- Misc
  "httpx>=0.27",
  "tenacity>=9.0",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "prometheus-client>=0.20",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipython>=8.27",
]
gpu = [
  "torch>=2.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graphs*", "tools*", "memory*", "rag*", "api*",
           "database*", "models*", "analytics*", "accessibility*",
           "prompts*", "voice*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
